--- a/CSS/lala.css
+++ b/CSS/lala.css
@@ -1,6 +1,17 @@
-header{
-    background-color: #00BFFF;
+.centralizar {
+    margin-top: 2%;
+    text-align: center;
+    font-family: fantasy;
+    color: #c5d1d4;
 }
-footer{
-    background-color: #00BFFF;
+.BarraLateral {
+  color: #000;
+}
+
+a {
+  color: #000;
+  font-family: fantasy;
+}
+a:hover {
+  color: gray;
 }
